solved overflow

--- a/project_3/src/App.css
+++ b/project_3/src/App.css
@@ -9,5 +9,5 @@ body {
 
 .container {
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 1600px;
 }
